--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "adorable-css": "^0.6.6",
     "eslint": "^7.32.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "svelte": "^3.44.0",
