--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "build": "rm -rf build && NODE_ENV=production svelte-kit build && touch ./build/.nojekyll",
+    "deploy": "gh-pages -d build -t true",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -12,12 +13,14 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.24",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "adorable-css": "^0.6.7",
     "eslint": "^8.8.0",
     "eslint-plugin-svelte3": "^3.4.0",
+    "gh-pages": "^3.2.3",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.2",
     "svelte-preprocess": "^4.10.2",
